ADD: ZEContainer added to ZEMeta system. ADD: Sound Source Types added to sound system. ADD: Common Source Types defined such as Effect, Music, Dialog, Video, Player Communication. User can also define his/her sound source type. ADD: Each Source Type volume can be controlled through Sound Module. ADD: Sound System integrated with options. ADD: Master Volume, Effect Volume, Music Volume, Dialog Volume, Video Volume, Player Communication Volume hass ben added as options. DEF: Volume options are non linear. Values below 50 are almost unhearable. ADD: Streaming disabled property added. If disable streaming is enabled every sound source becomes unstreamed. ADD: MaxBufferSize option added. MaxBufferSize defines maximum static sound source buffer can be. Sound Sources becomes streamed when sound resource's content execeed this value. ADD: Streaming enabled in sound source. DEF: Stream is not working properly. ADD: GetFrameTime() function added to ZECore. It gives time difference between previous and current frame. ADD: GetRunningTime() function added to ZECore. It gives total time elapsed since engine started running. FIX: ZECore::GetFrameId() function gives correct incremental frame id. BUG: GetFrameTime() does not work correctly. CHG: ZENamed::GetName() function returns empty string ("") instead of NULL when it's empty. CHG: ZENamed::SetName() function does not allocate empty string. FIX: If NULL passed to ZENamed::SetName() function it crashes. Now it checks parameter for NULL or Empty string. -ADD: Effects enabled in sound source.
svn path=/trunk/; revision=107

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -815,6 +815,15 @@
 			<File
 				RelativePath=".\Source\Core\Component.h"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+						Outputs="$(InputPath).zpp"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\Source\Core\Console.cpp"
@@ -1190,6 +1199,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\SoundFX.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Sound\SoundModule.cpp"
 				>
 			</File>
@@ -1370,38 +1383,6 @@
 			</File>
 			<File
 				RelativePath=".\Source\Particle\ParticleSystem.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Map"
-			>
-			<File
-				RelativePath=".\Source\Map\Map.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Map\Map.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Map\MapFileFormat.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Map\MapResource.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Map\MapResource.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Map\Octree.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Map\Octree.h"
 				>
 			</File>
 		</Filter>
@@ -1693,6 +1674,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Meta\Container.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Meta\Container.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Meta\PostProcessor.cpp"
 				>
 			</File>
@@ -1714,6 +1703,38 @@
 			</File>
 			<File
 				RelativePath=".\Source\Meta\Provider.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Map"
+			>
+			<File
+				RelativePath=".\Source\Map\Map.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Map\Map.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Map\MapFileFormat.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Map\MapResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Map\MapResource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Map\Octree.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Map\Octree.h"
 				>
 			</File>
 		</Filter>
