FIX: Volumes in sound sub-system are normalized and linearized to [0, 100] ADD: DirectSound Listener added. ADD: DirectSound 3D Buffer added. BUG: DirectSound 3D Sound Source can not be created in vista. CHG: ZEConsole::Log() function and zeLog macro now adds a new line character at the end of the message. FIX: ZECore::FrameTime and ZECore::RunningTime fixed.
svn path=/trunk/; revision=108

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1266,6 +1266,15 @@
 			<File
 				RelativePath=".\Source\Sound\SoundSource3D.h"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;"
+						Outputs="$(InputPath).zpp"
+					/>
+				</FileConfiguration>
 			</File>
 			<Filter
 				Name="DirectSound"
