ADD: OpenAL 3D Sound Source added. ADD: Device enumeration support added to Sound Subsystem and Sound Modules.
svn path=/trunk/; revision=110

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -5,7 +5,7 @@ LogFile = error.log
 [ModuleManager]
 GraphicsModule = Direct3D9
 InputModule = DirectInput
-SoundModule = DirectSound
+SoundModule = OpenAL
 NetworkModule = WinNetwork
 PhysicsModule = Ageia
 GameModule = TestGame
@@ -25,4 +25,16 @@ PostEffectQuality = 3
 HDRQuality = 5
 ShadowQuality = 1
 LightQuantity = 1
+
+[Sound]
+DeviceId = 0
+StreamingDisabled = false
+MaxBufferSize = 2000
+MasterVolume = 100
+SpeakerLayout = 1
+EffectVolume = 100
+DialogVolume = 100
+MusicVolume = 100
+VideoVolume = 100
+PlayerCommVolume = 100
 
