--- a/ZESDK/ZESDK.vcproj
+++ b/ZESDK/ZESDK.vcproj
@@ -44,7 +44,7 @@
 				PreprocessorDefinitions="FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_PERFHUD;ZEDEBUG_BREAKONERROR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
@@ -63,7 +63,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName)d.lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\Multi-threaded DLL\x86\Debug&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\Multi-threaded\x86\Debug&quot;"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
 			/>
@@ -133,7 +133,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName).lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\Multi-threaded DLL\x86\Release&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\Multi-threaded\x86\Release&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -799,6 +799,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Source\Graphics\PostEffect.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Source\Graphics\ProjectiveLight.cpp"
 				>
 			</File>
@@ -811,11 +815,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\PostEffect.h"
+				RelativePath="..\Source\Graphics\RenderOrder.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\RenderOrder.cpp"
+				RelativePath="..\Source\Graphics\RenderOrder.h"
 				>
 			</File>
 			<File
@@ -828,10 +832,6 @@
 			</File>
 			<File
 				RelativePath="..\Source\Graphics\ShadowRenderer.h"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\Graphics\RenderOrder.h"
 				>
 			</File>
 			<File
@@ -907,15 +907,23 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Source\Graphics\UIMaterial.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\UIMaterial.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Source\Graphics\VertexBuffer.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\VertexDeclaration.h"
+				RelativePath="..\Source\Graphics\VertexDeclaration.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\VertexDeclaration.cpp"
+				RelativePath="..\Source\Graphics\VertexDeclaration.h"
 				>
 			</File>
 			<File
@@ -1055,6 +1063,14 @@
 				</File>
 				<File
 					RelativePath="..\Source\Graphics\Direct3D9\D3D9TextureRenderer.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9UIMaterial.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9UIMaterial.h"
 					>
 				</File>
 				<File
@@ -1516,7 +1532,7 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="GUI"
+			Name="UI"
 			>
 		</Filter>
 		<File
