--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1385,368 +1385,64 @@
 			Name="Physics"
 			>
 			<File
-				RelativePath=".\Source\Physics\PhysicsBody.cpp"
+				RelativePath=".\Source\Physics\PhysicalBody.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsBody.h"
+				RelativePath=".\Source\Physics\PhysicalBody.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsBodyInfo.cpp"
+				RelativePath=".\Source\Physics\PhysicalCollision.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsBodyInfo.h"
+				RelativePath=".\Source\Physics\PhysicalCollision.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsBoxShapeInfo.cpp"
+				RelativePath=".\Source\Physics\PhysicalModule.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsBoxShapeInfo.h"
+				RelativePath=".\Source\Physics\PhysicalModule.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsCapsuleShapeInfo.cpp"
+				RelativePath=".\Source\Physics\PhysicalObject.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsCapsuleShapeInfo.h"
+				RelativePath=".\Source\Physics\PhysicalObject.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsCharacterController.cpp"
+				RelativePath=".\Source\Physics\PhysicalShapes.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsCharacterController.h"
+				RelativePath=".\Source\Physics\PhysicalShapes.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsCharacterControllerInfo.cpp"
+				RelativePath=".\Source\Physics\PhysicalTrigger.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsCharacterControllerInfo.h"
+				RelativePath=".\Source\Physics\PhysicalTrigger.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsCollision.cpp"
+				RelativePath=".\Source\Physics\PhysicalWorld.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicsCollision.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsCollisionMask.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsCollisionMask.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsConvexShapeInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsConvexShapeInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsCylindricalJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsCylindricalJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsDistanceJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsDistanceJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsFixedJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsFixedJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsFreeJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsFreeJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsJoint.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsJoint.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsMaterial.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsMaterial.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsModule.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsModule.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPlaneShapeInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPlaneShapeInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPointInPlaneJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPointInPlaneJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPointOnLineJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPointOnLineJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPrismaticJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPrismaticJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPulleyJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsPulleyJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsRevoluteJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsRevoluteJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsShapeInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsShapeInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsSphereShapeInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsSphereShapeInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsSphericalJointInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsSphericalJointInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsTrigger.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsTrigger.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsTrimeshShapeInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsTrimeshShapeInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsVehicle.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsVehicle.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsVehicleInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsVehicleInfo.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsWorld.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsWorld.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsWorldInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsWorldInfo.h"
+				RelativePath=".\Source\Physics\PhysicalWorld.h"
 				>
 			</File>
 			<Filter
 				Name="PhysX"
 				>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsBody.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsBody.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsCharacterController.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsCharacterController.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsCollision.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsCollision.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsJoint.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsJoint.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsMaterial.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsMaterial.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsModule.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsModule.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsModuleDescription.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsModuleDescription.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsReport.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsReport.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsStream.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsStream.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsTrigger.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsTrigger.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsUtility.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsUtility.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsVehicle.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsVehicle.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsWorld.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Physics\PhysX\PhysXPhysicsWorld.h"
-					>
-				</File>
 			</Filter>
 		</Filter>
 		<Filter
