--- a/ZESDK/ZESDK.vcproj
+++ b/ZESDK/ZESDK.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\Source&quot;;&quot;$(ProjectDir)..\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
 				PreprocessorDefinitions="FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_PERFHUD;ZEDEBUG_BREAKONERROR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,7 +63,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName)d.lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\Multi-threaded\x86\Debug&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Win x86\&quot;;&quot;$(ProjectDir)..\lib\Win x86\PhysX&quot;;&quot;$(ProjectDir)..\lib\Win x86\DirectX&quot;;&quot;$(ProjectDir)..\lib\Win x86\Debug&quot;;&quot;$(ProjectDir)..\lib\Win x86\Debug\MT&quot;"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
 			/>
@@ -111,7 +111,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\Source&quot;;&quot;$(ProjectDir)..\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
 				PreprocessorDefinitions="FREEIMAGE_LIB"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
@@ -133,7 +133,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName).lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\Multi-threaded\x86\Release&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Win x86\&quot;;&quot;$(ProjectDir)..\lib\Win x86\PhysX&quot;;&quot;$(ProjectDir)..\lib\Win x86\DirectX&quot;;&quot;$(ProjectDir)..\lib\Win x86\Release&quot;;&quot;$(ProjectDir)..\lib\Win x86\Release\MT&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -178,7 +178,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\Source&quot;;&quot;$(ProjectDir)..\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
 				PreprocessorDefinitions="FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_PERFHUD;ZEDEBUG_BREAKONERROR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -201,7 +201,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName)d_dll.lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Multi-threaded DLL\x86\debug&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Win x86\&quot;;&quot;$(ProjectDir)..\lib\Win x86\PhysX&quot;;&quot;$(ProjectDir)..\lib\Win x86\DirectX&quot;;&quot;$(ProjectDir)..\lib\Win x86\Debug&quot;;&quot;$(ProjectDir)..\lib\Win x86\Debug\MT DLL&quot;"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
 			/>
@@ -249,7 +249,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\Source&quot;;&quot;$(ProjectDir)..\Include&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
 				PreprocessorDefinitions="FREEIMAGE_LIB"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -272,7 +272,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName)_dll.lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Multi-threaded DLL\x86\Release&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Win x86\&quot;;&quot;$(ProjectDir)..\lib\Win x86\PhysX&quot;;&quot;$(ProjectDir)..\lib\Win x86\DirectX&quot;;&quot;$(ProjectDir)..\lib\Win x86\Release&quot;;&quot;$(ProjectDir)..\lib\Win x86\Release\MT DLL&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -436,6 +436,14 @@
 			</File>
 			<File
 				RelativePath="..\Source\ZEDS\Named.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\ZEDS\String.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\ZEDS\String.h"
 				>
 			</File>
 			<File
@@ -1426,6 +1434,54 @@
 		<Filter
 			Name="Particle"
 			>
+			<File
+				RelativePath="..\Source\Particle\Particle.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\Particle.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleController.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleController.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleEffect.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleEffect.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleEffectBrush.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleEffectBrush.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleEmitter.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleEmitter.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleSystem.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Particle\ParticleSystem.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Physics"
@@ -1434,14 +1490,6 @@
 		<Filter
 			Name="Sound"
 			>
-			<File
-				RelativePath="..\Source\Sound\DirectSoundModule.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\Sound\DirectSoundModule.h"
-				>
-			</File>
 			<File
 				RelativePath="..\Source\Sound\Listener.cpp"
 				>
@@ -1467,6 +1515,30 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Source\Sound\SoundResourceMP3.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Sound\SoundResourceMP3.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Sound\SoundResourceOGG.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Sound\SoundResourceOGG.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Sound\SoundResourceWAV.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Sound\SoundResourceWAV.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Source\Sound\SoundSource.cpp"
 				>
 			</File>
@@ -1482,6 +1554,110 @@
 				RelativePath="..\Source\Sound\SoundSource3D.h"
 				>
 			</File>
+			<Filter
+				Name="DirectSound"
+				>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSComponentBase.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSComponentBase.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSListener.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSListener.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSModule.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSModule.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSModuleDescription.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSModuleDescription.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSSoundSource.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSSoundSource.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSSoundSource3D.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\DirectSound\DSSoundSource3D.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="OpenAL"
+				>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALComponentBase.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALComponentBase.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALListener.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALListener.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALModule.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALModule.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALModuleDescription.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALModuleDescription.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALSoundSource.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALSoundSource.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALSoundSource3D.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Sound\OpenAL\ALSoundSource3D.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="VM"
@@ -1534,7 +1710,75 @@
 		<Filter
 			Name="UI"
 			>
+			<File
+				RelativePath="..\Source\UI\FontFile.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\FontFile.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\FontResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\FontResource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIControl.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIEvents.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIEvents.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIManager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIRectangle.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIRectangle.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UIRenderer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UITextControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\UI\UITextControl.h"
+				>
+			</File>
 		</Filter>
+		<File
+			RelativePath="..\Changelog.txt"
+			>
+		</File>
 		<File
 			RelativePath="..\Source\CompileOptions.h"
 			>
