FIX: Physics sub-system crash fixed. CHG: zeOutput log messages changed to zeLog messages. FIX: Old physics files has been removed. CHG: ZEScene stability increased.
svn path=/branches/v0.05-ModelPhysicsIntegration/; revision=118

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -7,7 +7,7 @@ GraphicsModule = Direct3D9
 InputModule = DirectInput
 SoundModule = OpenAL
 NetworkModule = WinNetwork
-PhysicsModule = Ageia
+PhysicsModule = PhysX
 GameModule = TestGame
 
 [Graphics]
