--- a/ZESDK/ZESDK.vcproj
+++ b/ZESDK/ZESDK.vcproj
@@ -339,6 +339,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Source\Core\DebugComponent.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Core\DebugComponent.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Source\Core\Error.cpp"
 				>
 			</File>
@@ -807,10 +815,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\PostEffect.h"
-				>
-			</File>
-			<File
 				RelativePath="..\Source\Graphics\ProjectiveLight.cpp"
 				>
 			</File>
@@ -840,6 +844,14 @@
 			</File>
 			<File
 				RelativePath="..\Source\Graphics\ShadowRenderer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\SimpleMaterial.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\SimpleMaterial.h"
 				>
 			</File>
 			<File
@@ -1039,6 +1051,14 @@
 				</File>
 				<File
 					RelativePath="..\Source\Graphics\Direct3D9\D3D9ShadowRenderer.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9SimpleMaterial.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9SimpleMaterial.h"
 					>
 				</File>
 				<File
@@ -1415,7 +1435,43 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Source\Model\ModelAnimation.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Model\ModelAnimation.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Model\ModelBone.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Model\ModelBone.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Model\ModelFileFormat.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\Source\Model\ModelFileFormat.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Model\ModelMesh.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Model\ModelMesh.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Model\ModelMeshLOD.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Model\ModelMeshLOD.h"
 				>
 			</File>
 			<File
@@ -1486,6 +1542,122 @@
 		<Filter
 			Name="Physics"
 			>
+			<File
+				RelativePath="..\Source\Physics\PhysicalCollision.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalCollision.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalObject.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalObject.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalRigidBody.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalRigidBody.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalShapes.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalShapes.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalTrigger.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalTrigger.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalWorld.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicalWorld.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicsModule.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Physics\PhysicsModule.h"
+				>
+			</File>
+			<Filter
+				Name="PhysX"
+				>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXComponentBase.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXComponentBase.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXConversion.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXConversion.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXModule.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXModule.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXModuleDescription.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXModuleDescription.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXPhysicalRigidBody.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXPhysicalRigidBody.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXPhysicalWorld.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXPhysicalWorld.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXUserOutputStream.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Physics\PhysX\PhysXUserOutputStream.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Sound"
