FIX: Minor project configuration bugs. No WIN32 and _DEBUG/NDEBUG definitions in ZESDK. CONSOLE definition on Zinek Engine project.
svn path=/trunk/; revision=122

--- a/ZESDK/ZESDK.vcproj
+++ b/ZESDK/ZESDK.vcproj
@@ -41,11 +41,11 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
-				PreprocessorDefinitions="FREEIMAGE_LIB;ZE_DEBUG_ENABLED;ZE_DEBUG_D3D9_PERFHUD;ZE_DEBUG_BREAK_ON_ERROR;ZE_DEBUG_BREAK_ON_WARNING"
+				PreprocessorDefinitions="WIN32;_DEBUG;FREEIMAGE_LIB;ZE_DEBUG_ENABLED;ZE_DEBUG_D3D9_PERFHUD;ZE_DEBUG_BREAK_ON_ERROR;ZE_DEBUG_BREAK_ON_WARNING"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				WarningLevel="3"
+				WarningLevel="2"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
 			/>
@@ -112,10 +112,10 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
-				PreprocessorDefinitions="FREEIMAGE_LIB"
+				PreprocessorDefinitions="WIN32;NDEBUG;FREEIMAGE_LIB"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
-				WarningLevel="3"
+				WarningLevel="2"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
 			/>
@@ -179,11 +179,11 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
-				PreprocessorDefinitions="FREEIMAGE_LIB;ZE_DEBUG_ENABLED;ZE_DEBUG_D3D9_PERFHUD;ZE_DEBUG_BREAK_ON_ERROR;ZE_DEBUG_BREAK_ON_WARNING"
+				PreprocessorDefinitions="WIN32;_DEBUG;FREEIMAGE_LIB;ZE_DEBUG_ENABLED;ZE_DEBUG_D3D9_PERFHUD;ZE_DEBUG_BREAK_ON_ERROR;ZE_DEBUG_BREAK_ON_WARNING"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				WarningLevel="3"
+				WarningLevel="2"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
 			/>
@@ -250,11 +250,11 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\source&quot;;&quot;$(ProjectDir)..\include&quot;;&quot;$(ProjectDir)..\include\PhysX\Cooking&quot;;&quot;$(ProjectDir)..\include\PhysX\Foundation&quot;;&quot;$(ProjectDir)..\include\PhysX\NxCharacter&quot;;&quot;$(ProjectDir)..\include\PhysX\PhysXLoader&quot;;&quot;$(ProjectDir)..\include\PhysX\Physics&quot;;&quot;$(ProjectDir)..\include\OpenAL&quot;;&quot;$(ProjectDir)..\include\DirectX&quot;"
-				PreprocessorDefinitions="FREEIMAGE_LIB"
+				PreprocessorDefinitions="WIN32;NDEBUG;FREEIMAGE_LIB"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="2"
-				WarningLevel="3"
+				WarningLevel="2"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
 			/>
