FIX: ZESimpleMaterial Update bug fixed. FIX: ZEScene memory corruption on shutdown bug fixed. FIX: ZEColoredVertex vertex declaration bug fixed. FIX: ZED3D9FixedMaterial and ZED3D9SimpleMaterial ZERenderOrder flags ZE_ROF_VIEWPORT_TRANSFORM and ZE_ROF_WORLD_TRANSFORM bugs fixed. FIX: ZEPhysicalWorld Debug Render no output bug fixed.
svn path=/trunk/; revision=127

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -683,11 +683,11 @@
 						>
 					</File>
 					<File
-						RelativePath=".\RunDir\resources\shaders\SimplePixelShader.vs"
+						RelativePath=".\RunDir\resources\shaders\SimplePixelShader.ps"
 						>
 					</File>
 					<File
-						RelativePath=".\RunDir\resources\shaders\SimpleVertexShader.ps"
+						RelativePath=".\RunDir\resources\shaders\SimpleVertexShader.vs"
 						>
 					</File>
 					<File
