CHG: ZEDS error reporting and handling improvements. CHG: ZEDS_ASSERT renamed to zedsAssert. ZEDS_WARNING renamed to zedsWarning. ADD: ZEVector2/3/4::One constant added. CHG: Scale property added to ZEPhysicalObject. FIX: ZEPhysicalStaticMesh has been fixed. FIX: ZEPhysicalRigidBody non-dynamic problem fixed. ADD: NxCookingInterface variable added ZEPhysXModule and ZEPhysXComponentBase. ADD: Enable flag added to ZEPhysicalObject CHG: Improved main loop performance.
svn path=/trunk/; revision=129

--- a/Zinek Engine Test.vcproj
+++ b/Zinek Engine Test.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="$(ProjectDir)Include;$(ProjectDir)Test;$(ProjectDir)Source"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;ZEDEBUG_ENABLED;ZEDEBUG_BREAKONWARNING;ZEDEBUG_BREAKONERROR;ZEDEBUG_CHECKMEMORY"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;ZE_DEBUG_ENABLED;ZE_DEBUG_BREAK_ON_WARNING;ZE_DEBUG_BREAK_ON_ERROR;ZE_DEBUG_CHECK_MEMORY"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
