--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1437,11 +1437,11 @@
 			Name="Physics"
 			>
 			<File
-				RelativePath=".\Source\Physics\PhysicalCollision.cpp"
+				RelativePath=".\Source\Physics\PhysicalCallbacks.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Source\Physics\PhysicalCollision.h"
+				RelativePath=".\Source\Physics\PhysicalCallbacks.h"
 				>
 			</File>
 			<File
@@ -1519,6 +1519,14 @@
 			<Filter
 				Name="PhysX"
 				>
+				<File
+					RelativePath=".\Source\Physics\PhysX\PhysXCollisionManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\PhysX\PhysXCollisionManager.h"
+					>
+				</File>
 				<File
 					RelativePath=".\Source\Physics\PhysX\PhysXComponentBase.cpp"
 					>
